Added questions 7 and 8